--- a/src/reset.css
+++ b/src/reset.css
@@ -8,7 +8,9 @@ body {
   background-color: #f7f7fa;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
