💄 리뷰어 리스트 UI 구현

--- a/src/reset.css
+++ b/src/reset.css
@@ -1,24 +1,38 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #f7f7fa;
 }
 
+body,
 ul,
-li {
+li,
+div,
+p {
   margin: 0;
   padding: 0;
+}
+
+ul,
+li {
   list-style: none;
 }
 
 button {
-    border: none;
+  border: none;
 }
 
 button:hover {
-    cursor: pointer;
+  cursor: pointer;
+}
+
+a {
+  text-decoration: none;
+}
+
+div {
+  box-sizing: border-box;
 }
