--- a/src/components/BrandRequestHistoryModal/BrandRequestHistoryModal.scss
+++ b/src/components/BrandRequestHistoryModal/BrandRequestHistoryModal.scss
@@ -1,32 +1,64 @@
+@import './../ReviewerList/ReviewerList.scss';
+
 .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    display: flex;
-    justify-content: center;
-    align-items: center;  
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .modal-container {
-    width: 5rem;
-    height: 5rem;
-    background-color: #fff;
-    width: 31rem;
-    height: 42.5rem;
-    border-radius: 10px;
-    padding: 1.875rem;
+  width: 5rem;
+  height: 5rem;
+  background-color: #fff;
+  width: 31rem;
+  height: 42.5rem;
+  border-radius: 10px;
+  padding: 1.875rem;
 }
 
 .close-button {
-    float: right;
+  float: right;
 }
 
-.modal_title {
-    font-size: 1.5rem;
-    font-weight: 500;
+.modal-title {
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-bottom: 2rem;
+}
+
+.modal-table {
+  grid-template-columns: 2fr 1fr;
+}
+
+.modal-table_body-row {
+  grid-template-columns: 2fr 0.88fr;
+  height: 3.75rem;
+}
+
+.modal-table_body-col-1 {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.sns-icon {
+  margin-right: 6px;
+}
+
+.number-of-request {
+  font-size: 0.875rem;
+  font-weight: 500;
+  margin-bottom: 5px;
+}
+
+.modal-table_header {
+  font-size: 0.75rem;
 }
