--- a/src/components/RecruitStatus/RecruitStatus.scss
+++ b/src/components/RecruitStatus/RecruitStatus.scss
@@ -1,10 +1,11 @@
 $border-grey: #e1e3e9;
-$button-inactive: #f7f7fa;
-$button-active: #0067ff;
-$inactive-text-color: #9da1a8;
+$button-bg-color-inactive: #f7f7fa;
+$color-active: #0067ff;
+$text-color-inactive: #9da1a8;
+$text-color-black: #202225;
 
 .header {
-  background-color: #0067ff;
+  background-color: $color-active;
   color: #fff;
   height: 3.75rem;
   display: flex;
@@ -33,7 +34,7 @@ $inactive-text-color: #9da1a8;
   border-right: solid 1px $border-grey;
   font-size: 1rem;
   padding: 1.125rem 3rem;
-  color: $inactive-text-color;
+  color: $text-color-inactive;
   &:hover {
     cursor: pointer;
   }
@@ -47,18 +48,44 @@ $inactive-text-color: #9da1a8;
   justify-content: center;
   align-items: center;
   .reviewer-list_no-reviewer {
-    color: $inactive-text-color;
+    color: $text-color-inactive;
   }
 }
 
-.submit-button {
-  display: block;
+@mixin button-inactive {
   margin: 0 auto;
-  background-color: $button-inactive;
-  width: 104px;
-  height: 50px;
+  background-color: $button-bg-color-inactive;
   border-radius: 5px;
   font-size: 1rem;
   font-weight: 500;
-  color: $inactive-text-color;
+  color: $text-color-inactive;
+  &:hover {
+    cursor: default;
+  }
+}
+
+.button-inactive {
+  width: 104px;
+  height: 50px;
+  @include button-inactive;
+}
+
+@mixin button-active-white {
+  margin: 0 auto;
+  background-color: #fff;
+  border: solid 1px $border-grey;
+  border-radius: 5px;
+  font-size: 1rem;
+  font-weight: 500;
+  color: $text-color-black;
+}
+
+@mixin button-active-blue {
+  display: block;
+  margin: 0 auto;
+  background-color: $color-active;
+  border-radius: 5px;
+  font-size: 1rem;
+  font-weight: 500;
+  color: #fff;
 }
