--- a/src/components/ReviewerList/ReviewerList.scss
+++ b/src/components/ReviewerList/ReviewerList.scss
@@ -198,3 +198,12 @@ $message-box-height: 1.93rem;
 .active-white {
   @include button-active-white;
 }
+
+.table-body_no-content {
+  color: $text-color-inactive;
+  text-align: center;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
