--- a/src/components/BrandRequestHistoryModal/BrandRequestHistoryModal.scss
+++ b/src/components/BrandRequestHistoryModal/BrandRequestHistoryModal.scss
@@ -1,4 +1,4 @@
-@import './../ReviewerList/ReviewerList.scss';
+@import './../../common.scss';
 
 .overlay {
   position: fixed;
@@ -15,7 +15,7 @@
 }
 
 .modal-container {
-  background-color: #fff;
+  background-color: $white;
   width: 31rem;
   height: 42.5rem;
   border-radius: 10px;
@@ -38,7 +38,7 @@
   grid-template-columns: 2fr 1fr;
   width: 100%;
   height: 2rem;
-  background-color: #f7f7fa;
+  background-color: $bg-color-light-grey;
   border-top: solid 1px $border-grey;
   border-bottom: solid 1px $border-grey;
   li:first-child {
@@ -56,7 +56,7 @@
 .modal_table-body-container {
   width: 100%;
   height: 24rem;
-  background-color: #fff;
+  background-color: $white;
   overflow-y: auto;
   margin-bottom: 1rem;
 }
