♻️ 컴포넌트 분리

--- a/src/common.scss
+++ b/src/common.scss
@@ -7,3 +7,17 @@ $bg-color-light-grey: #f7f7fa;
 $color-active: #0067ff;
 $text-color-inactive: #9da1a8;
 $text-color-black: #202225;
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
