--- a/src/components/ConfirmModal/ConfirmModal.scss
+++ b/src/components/ConfirmModal/ConfirmModal.scss
@@ -1,19 +1,5 @@
 @import './../../common.scss';
 
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .confirm-modal-container {
   background-color: $white;
   width: 25.875rem;
@@ -32,7 +18,7 @@
   }
 }
 
-.confirm-button {
+.confirm-modla_button {
   border-top: solid 1px #e6e8ed;
   width: inherit;
   color: $color-active;
